--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "gulp": "^3.8.8"
   },
   "dependencies": {
+    "bootstrap-sass": "^3.0.0",
     "laravel-elixir": "^4.0.0",
-    "bootstrap-sass": "^3.0.0"
+    "laravel-elixir-vueify": "^1.0.0",
+    "vue-resource": "^0.6.1"
   }
 }
