--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": ">=5.5.9",
         "laravel/framework": "5.2.*",
         "skovmand/mailchimp-laravel": "1.*",
-        "guzzlehttp/guzzle": "^6.1"
+        "guzzlehttp/guzzle": "^6.1",
+        "mailgun/mailgun-php": "~1.7.2"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
