--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bootstrap-sass": "^3.0.0",
     "laravel-elixir": "^4.0.0",
     "laravel-elixir-vueify": "^1.0.0",
+    "moment": "^2.11.2",
     "vue-resource": "^0.6.1"
   }
 }
